WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208930
REGRESSION: (
r257915
?) [ Mac ] accessibility/accessibility-node-memory-management.html is flaky failing.
https://bugs.webkit.org/show_bug.cgi?id=208930
Summary
REGRESSION: (r257915?) [ Mac ] accessibility/accessibility-node-memory-manage...
Jason Lawrence
Reported
2020-03-11 10:54:39 PDT
accessibility/accessibility-node-memory-management.html Description: This test is flaky failing on Mac. Most of the failure are on Debug, and they look pretty consistent. There appears to be a regression point at
r257915
. History:
https://results.webkit.org/?suite=layout-tests&test=accessibility%2Faccessibility-node-memory-management.html&platform=ios&platform=mac&flavor=wk2&flavor=wk1&style=release&style=debug&limit=50000
Diff: --- /Volumes/Data/slave/mojave-debug-tests-wk1/build/layout-test-results/accessibility/accessibility-node-memory-management-expected.txt +++ /Volumes/Data/slave/mojave-debug-tests-wk1/build/layout-test-results/accessibility/accessibility-node-memory-management-actual.txt @@ -5,7 +5,7 @@ PASS expectedButtonRole != expectedDetachedRole is true PASS canvasButtonRole is expectedButtonRole -PASS detachedCanvasButtonRole is expectedDetachedRole +FAIL detachedCanvasButtonRole should be AXRole: . Was AXRole: AXButton. PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch
(10.82 KB, patch)
2020-07-13 12:26 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(10.82 KB, patch)
2020-07-13 12:59 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-03-11 10:54:52 PDT
<
rdar://problem/60330667
>
Jason Lawrence
Comment 2
2020-03-11 11:02:27 PDT
I have marked this test as failing here:
https://trac.webkit.org/changeset/258270/webkit
Issue will be tracked in this Radar: <
rdar://problem/60173203
>
Andres Gonzalez
Comment 3
2020-07-13 12:26:13 PDT
Created
attachment 404164
[details]
Patch
chris fleizach
Comment 4
2020-07-13 12:43:29 PDT
Comment on
attachment 404164
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=404164&action=review
> Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:293 > + bool updatedChild = false; // Set to true if at least one child's subtree is updated.
extra space after subtree
Andres Gonzalez
Comment 5
2020-07-13 12:59:56 PDT
Created
attachment 404167
[details]
Patch
EWS
Comment 6
2020-07-13 16:15:23 PDT
Committed
r264323
: <
https://trac.webkit.org/changeset/264323
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404167
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug