REGRESSION: (r257915?) [ Mac ] accessibility/accessibility-node-memory-management.html is flaky failing. https://bugs.webkit.org/show_bug.cgi?id=208930 Source/WebCore:

Reviewed by Chris Fleizach.

Test: accessibility/accessibility-node-memory-management.html

In some cases, such as the empty canvas in this test, the algorithm in
AXIsolatedTree::updateChildren to only update the children that are
added or removed does not work. In those cases, fallback to updating
the entire subtree.

* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateChildren):

LayoutTests:

<rdar://problem/60173203>

Reviewed by Chris Fleizach.

Using setTimeout and waitFor/Promises to make this test work in both
isolated tree mode on and off.

* accessibility/accessibility-node-memory-management-expected.txt:
* accessibility/accessibility-node-memory-management.html:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/227085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264323 268f45cc-cd09-0410-ab3c-d52691b4dbfc